--- a/app/src/main/res/layout/activity_connect.xml
+++ b/app/src/main/res/layout/activity_connect.xml
@@ -12,7 +12,7 @@
         android:id="@+id/room_edittext_description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/room_description"/>
+        android:text="@string/enter_server_name"/>
 
     <LinearLayout
         android:orientation="horizontal"
@@ -30,20 +30,23 @@
             android:imeOptions="actionDone"
             android:inputType="text"/>
 
-        <ImageButton
+        <Button
             android:id="@+id/connect_button"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:contentDescription="@string/connect_description"
-            android:background="@android:drawable/sym_action_call" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/connect" />
 
-        <ImageButton
-            android:id="@+id/add_favorite_button"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            android:contentDescription="@string/add_favorite_description"
-            android:background="@android:drawable/ic_input_add" />
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/connected_state"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:lines="1"
+        android:maxLines="1"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="@string/disconnected"/>
 
     <TextView
         android:id="@+id/room_listview_description"
@@ -53,7 +56,7 @@
         android:lines="1"
         android:maxLines="1"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/favorites"
+        android:text="@string/rooms"
         android:gravity="center_vertical"/>
 
     <FrameLayout
