--- a/app/src/main/res/values-v17/styles.xml
+++ b/app/src/main/res/values-v17/styles.xml
@@ -5,4 +5,11 @@
     <item name="android:windowFullscreen">true</item>
     <item name="android:windowNoTitle">true</item>
   </style>
+
+  <style name="RoomActivityTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+
+    <item name="android:windowActionBar">false</item>
+    <item name="android:windowFullscreen">true</item>
+    <item name="android:windowNoTitle">true</item>
+  </style>
 </resources>
