--- a/app/src/main/res/layout/activity_connect.xml
+++ b/app/src/main/res/layout/activity_connect.xml
@@ -15,6 +15,7 @@
         android:text="@string/enter_server_name"/>
 
     <LinearLayout
+        android:id="@+id/connect_layout"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -38,6 +39,43 @@
 
     </LinearLayout>
 
+    <RelativeLayout
+        android:id="@+id/login_layout"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_marginBottom="8dp"
+        android:visibility="gone">
+
+        <EditText
+            android:id="@+id/username_edittext"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_toLeftOf="@+id/login_button"
+            android:layout_weight="1"
+            android:singleLine="true"
+            android:imeOptions="actionDone"
+            android:inputType="text"/>
+
+        <EditText
+            android:id="@+id/password_edittext"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_toLeftOf="@+id/login_button"
+            android:layout_below="@+id/username_edittext"
+            android:singleLine="true"
+            android:imeOptions="actionDone"
+            android:inputType="text"/>
+
+        <Button
+            android:id="@+id/login_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:text="@string/login" />
+
+    </RelativeLayout>
     <TextView
         android:id="@+id/connected_state"
         android:layout_width="match_parent"
@@ -48,24 +86,53 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="@string/disconnected"/>
 
-    <TextView
-        android:id="@+id/room_listview_description"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:layout_marginTop="8dp"
-        android:lines="1"
-        android:maxLines="1"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/rooms"
-        android:gravity="center_vertical"/>
-
-    <FrameLayout
+    <RelativeLayout
+        android:id="@+id/room_list_layout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:visibility="gone">
+
+        <TextView
+            android:id="@+id/room_listview_description"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_marginTop="8dp"
+            android:lines="1"
+            android:maxLines="1"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/rooms"
+            android:gravity="center_vertical"/>
+
+        <LinearLayout
+            android:id="@+id/add_room_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_below="@+id/room_listview_description">
+
+            <EditText
+                android:id="@+id/addroom_edittext"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:singleLine="true"
+                android:imeOptions="actionDone"
+                android:inputType="text"
+                android:visibility="gone"/>
+
+            <ImageButton
+                android:id="@+id/add_room_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@+id/addroom_edittext"
+                android:src="@drawable/ic_add_white_24dp"/>
+
+        </LinearLayout>
 
         <ListView
             android:id="@+id/room_listview"
+            android:layout_below="@+id/add_room_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:drawSelectorOnTop="false" />
@@ -76,5 +143,5 @@
             android:layout_height="match_parent"
             android:gravity="center"
             android:text="@string/no_favorites" />
-    </FrameLayout>
+    </RelativeLayout>
 </LinearLayout>
