--- a/app/src/main/res/layout/user_row.xml
+++ b/app/src/main/res/layout/user_row.xml
@@ -4,8 +4,8 @@
     android:orientation="horizontal">
 
     <ImageView
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:id="@+id/image_id"
         android:layout_margin="5dp"
         android:layout_alignParentLeft="true"
@@ -25,10 +25,9 @@
 
     <ImageButton
         android:id="@+id/call_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_alignParentRight="true"
         android:layout_margin="5dp"
-        android:src="@drawable/ic_call_black_24dp"
-        android:background="#00000000"/>
+        android:background="@drawable/ic_call_black_24dp"/>
 </RelativeLayout>
