--- a/app/src/main/res/menu/connect_menu.xml
+++ b/app/src/main/res/menu/connect_menu.xml
@@ -1,13 +1,10 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item
-        android:id="@+id/action_loopback"
-        android:icon="@drawable/ic_loopback_call"
-        android:showAsAction="always"
-        android:title="@string/action_loopback"/>
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:icon="@android:drawable/ic_menu_preferences"
-        android:showAsAction="ifRoom"
+        app:showAsAction="never"
         android:title="@string/action_settings"/>
 </menu>
