--- a/app/src/main/res/layout/activity_connect.xml
+++ b/app/src/main/res/layout/activity_connect.xml
@@ -1,119 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_margin="16dp"
+
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:weightSum="1"
-    android:layout_centerHorizontal="true">
+    android:fitsSystemWindows="true"
+    android:clickable="true" >
 
     <LinearLayout
-        android:id="@+id/connect_layout"
-        android:orientation="horizontal"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_margin="16dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:layout_marginBottom="8dp">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
 
-        <TextView
-            android:id="@+id/room_edittext_description"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/enter_server_name"/>
-
-        <EditText
-            android:id="@+id/room_edittext"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:singleLine="true"
-            android:imeOptions="actionDone"
-            android:inputType="text"/>
-
-        <Button
-            android:id="@+id/connect_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/connect" />
-
-    </LinearLayout>
-
-    <RelativeLayout
-        android:id="@+id/login_layout"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:layout_marginBottom="8dp"
-        android:visibility="gone">
-
-        <EditText
-            android:id="@+id/username_edittext"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_toLeftOf="@+id/login_button"
-            android:layout_weight="1"
-            android:singleLine="true"
-            android:imeOptions="actionDone"
-            android:inputType="text"/>
-
-        <EditText
-            android:id="@+id/password_edittext"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_toLeftOf="@+id/login_button"
-            android:layout_below="@+id/username_edittext"
-            android:singleLine="true"
-            android:imeOptions="actionDone"
-            android:inputType="text"/>
-
-        <Button
-            android:id="@+id/login_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:text="@string/login" />
-
-    </RelativeLayout>
-    <TextView
-        android:id="@+id/connected_state"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:lines="1"
-        android:maxLines="1"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="@string/disconnected"/>
-
-    <RelativeLayout
-        android:id="@+id/room_list_layout"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:visibility="gone">
-
-        <TextView
-            android:id="@+id/room_listview_description"
-            android:layout_width="match_parent"
-            android:layout_height="48dp"
-            android:layout_marginTop="8dp"
-            android:lines="1"
-            android:maxLines="1"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="@string/rooms"
-            android:gravity="center_vertical"/>
+        android:weightSum="1"
+        android:layout_centerHorizontal="true">
 
         <LinearLayout
-            android:id="@+id/add_room_layout"
+            android:id="@+id/connect_layout"
+            android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_below="@+id/room_listview_description">
+            android:gravity="center"
+            android:layout_marginBottom="8dp">
+
+            <TextView
+                android:id="@+id/room_edittext_description"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/enter_server_name"
+                android:visibility="gone"/>
 
             <EditText
-                android:id="@+id/addroom_edittext"
-                android:layout_width="match_parent"
+                android:id="@+id/room_edittext"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:singleLine="true"
@@ -121,27 +43,131 @@
                 android:inputType="text"
                 android:visibility="gone"/>
 
-            <ImageButton
-                android:id="@+id/add_room_button"
+            <Button
+                android:id="@+id/connect_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_toRightOf="@+id/addroom_edittext"
-                android:src="@drawable/ic_add_white_24dp"/>
+                android:text="@string/connect"
+                android:visibility="gone"/>
 
+            <ProgressBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:indeterminate="true"/>
         </LinearLayout>
 
-        <ListView
-            android:id="@+id/room_listview"
-            android:layout_below="@+id/add_room_layout"
+        <RelativeLayout
+            android:id="@+id/login_layout"
+            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:drawSelectorOnTop="false" />
-
-        <TextView
-            android:id="@android:id/empty"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="@string/no_favorites" />
-    </RelativeLayout>
-</LinearLayout>
+            android:layout_marginBottom="8dp"
+            android:visibility="gone">
+
+            <EditText
+                android:id="@+id/username_edittext"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_toLeftOf="@+id/login_button"
+                android:layout_weight="1"
+                android:singleLine="true"
+                android:imeOptions="actionDone"
+                android:inputType="text"/>
+
+            <EditText
+                android:id="@+id/password_edittext"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_toLeftOf="@+id/login_button"
+                android:layout_below="@+id/username_edittext"
+                android:singleLine="true"
+                android:imeOptions="actionDone"
+                android:inputType="text"/>
+
+            <Button
+                android:id="@+id/login_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:text="@string/login" />
+
+        </RelativeLayout>
+        <TextView
+            android:id="@+id/connected_state"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:lines="1"
+            android:maxLines="1"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="@string/disconnected"/>
+
+        <RelativeLayout
+            android:id="@+id/room_list_layout"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:visibility="gone">
+
+            <TextView
+                android:id="@+id/room_listview_description"
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:layout_marginTop="8dp"
+                android:lines="1"
+                android:maxLines="1"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:text="@string/rooms"
+                android:gravity="center_vertical"/>
+
+            <LinearLayout
+                android:id="@+id/add_room_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_below="@+id/room_listview_description">
+
+                <EditText
+                    android:id="@+id/addroom_edittext"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:singleLine="true"
+                    android:imeOptions="actionDone"
+                    android:inputType="text"
+                    android:visibility="gone"/>
+
+                <ImageButton
+                    android:id="@+id/add_room_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@+id/addroom_edittext"
+                    android:src="@drawable/ic_add_white_24dp"/>
+
+            </LinearLayout>
+
+            <ListView
+                android:id="@+id/room_listview"
+                android:layout_below="@+id/add_room_layout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:drawSelectorOnTop="false" />
+
+            <TextView
+                android:id="@android:id/empty"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:text="@string/no_favorites" />
+        </RelativeLayout>
+    </LinearLayout>
+
+
+    <include
+        layout="@layout/room_drawer"
+        android:layout_width="@dimen/drawer_width"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"/>
+
+</android.support.v4.widget.DrawerLayout>
