--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -4,10 +4,6 @@
     android:id="@+id/activity_chat"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="org.appspot.apprtc.RoomActivity">
 
     <TextView
@@ -16,10 +12,35 @@
         android:layout_height="wrap_content"
         android:text="Room Name"/>
 
+    <TextView
+        android:id="@+id/emptyChat"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/roomName"
+        android:layout_above="@+id/chatEdit"
+        android:text="@string/emptyChat"
+        android:gravity="center"
+        android:textSize="20sp"/>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/roomName"/>
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/roomName"
+        android:layout_above="@+id/chatEdit"/>
 
+    <EditText
+        android:id="@+id/chatEdit"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_toLeftOf="@+id/sendButton"/>
+
+    <ImageButton
+        android:id="@+id/sendButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:src="@drawable/ic_send_white_48dp"/>
 </RelativeLayout>
