--- a/app/src/main/res/layout/fragment_roomlist.xml
+++ b/app/src/main/res/layout/fragment_roomlist.xml
@@ -16,10 +16,20 @@
         android:layout_height="wrap_content"
         android:text="Room Name"/>
 
+    <TextView
+        android:id="@+id/emptyRoom"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/roomName"
+        android:text="@string/emptyRoom"
+        android:gravity="center"
+        android:textSize="20sp"/>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="#ECEFF1"
         android:layout_below="@+id/roomName"/>
 
 </RelativeLayout>
