--- a/app/src/main/res/layout/user_row.xml
+++ b/app/src/main/res/layout/user_row.xml
@@ -1,33 +1,45 @@
 <RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:background="#FFFFFF"
+    android:layout_marginBottom="10dp">
 
     <ImageView
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:id="@+id/image_id"
         android:layout_margin="5dp"
+        android:layout_centerVertical="true"
         android:layout_alignParentLeft="true"
         android:src="@drawable/user_icon"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center"
+        android:gravity="left|center_vertical"
         android:text="User Name"
         android:layout_margin="5dp"
         android:layout_toRightOf="@+id/image_id"
         android:layout_toLeftOf="@+id/call_button"
-        android:layout_alignTop="@+id/image_id"
-        android:layout_alignBottom="@+id/image_id"
+        android:layout_centerVertical="true"
+        android:textStyle="bold"
+        android:textSize="20sp"
         android:id="@+id/text_id"/>
 
     <ImageButton
         android:id="@+id/call_button"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:layout_alignParentRight="true"
-        android:layout_margin="5dp"
+        android:layout_toLeftOf="@+id/chat_button"
+        android:layout_margin="25dp"
         android:background="@drawable/ic_call_black_24dp"/>
+
+    <ImageButton
+        android:id="@+id/chat_button"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_alignParentRight="true"
+        android:layout_margin="25dp"
+        android:background="@drawable/ic_chat_bubble_black_24dp"/>
 </RelativeLayout>
