--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -6,12 +6,13 @@
     <item name="android:windowNoTitle">true</item>
   </style>
 
-  <style name="RoomActivityTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+  <style name="RoomActivityTheme" parent="Theme.AppCompat.Light.NoActionBar">
 
     <item name="windowActionBar">false</item>
     <item name="windowNoTitle">true</item>
     <item name="colorPrimary">@color/primary</item>
     <item name="colorPrimaryDark">@color/primary_dark</item>
     <item name="colorAccent">@color/accent</item>
+
   </style>
 </resources>
