--- a/app/src/main/res/layout/fragment_call.xml
+++ b/app/src/main/res/layout/fragment_call.xml
@@ -28,6 +28,7 @@
            android:id="@+id/button_call_disconnect"
            android:background="@drawable/disconnect"
            android:contentDescription="@string/disconnect_call"
+           android:focusableInTouchMode="false"
            android:layout_marginEnd="16dp"
            android:layout_width="48dp"
            android:layout_height="48dp"/>
@@ -36,6 +37,7 @@
            android:id="@+id/button_call_switch_camera"
            android:background="@android:drawable/ic_menu_camera"
            android:contentDescription="@string/switch_camera"
+           android:focusableInTouchMode="false"
            android:layout_marginEnd="8dp"
            android:layout_width="48dp"
            android:layout_height="48dp"/>
@@ -44,6 +46,7 @@
            android:id="@+id/button_call_scaling_mode"
            android:background="@drawable/ic_action_return_from_full_screen"
            android:contentDescription="@string/disconnect_call"
+            android:focusableInTouchMode="false"
            android:layout_width="48dp"
            android:layout_height="48dp"/>
 
@@ -51,6 +54,7 @@
            android:id="@+id/button_call_toggle_mic"
            android:background="@android:drawable/ic_btn_speak_now"
            android:contentDescription="@string/toggle_mic"
+           android:focusableInTouchMode="false"
            android:layout_marginEnd="8dp"
            android:layout_width="48dp"
            android:layout_height="48dp"/>
