--- a/app/src/main/res/layout/fragment_roomlist.xml
+++ b/app/src/main/res/layout/fragment_roomlist.xml
@@ -5,23 +5,44 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="org.appspot.apprtc.RoomActivity">
 
-    <TextView
-        android:id="@+id/roomName"
+    <RelativeLayout
+        android:id="@+id/room_controls_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Room Name"/>
+        android:background="@color/primary"
+        android:layout_marginBottom="2dp">
+        <Button
+            android:id="@+id/roomsButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/rooms_button"
+            android:textColor="@color/white"
+            android:background="@color/primary"/>
+
+        <TextView
+            android:id="@+id/roomName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:gravity="center"
+            android:textSize="16sp"
+            android:layout_alignTop="@+id/roomsButton"
+            android:layout_alignBottom="@+id/roomsButton"
+            android:textColor="@color/white"
+            android:text="Room Name"/>
+
+    </RelativeLayout>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
         android:background="#ECEFF1"
-        android:layout_below="@+id/roomName"/>
+        android:layout_below="@+id/room_controls_layout"/>
 
     <TextView
         android:id="@+id/emptyRoom"
