--- a/app/src/main/res/xml/webrtc_preferences.xml
+++ b/app/src/main/res/xml/webrtc_preferences.xml
@@ -213,12 +213,6 @@
         android:key="@string/pref_miscsettings_key"
         android:title="@string/pref_miscsettings_title">
 
-        <EditTextPreference
-            android:key="@string/pref_room_server_url_key"
-            android:title="@string/pref_room_server_url_title"
-            android:inputType="text"
-            android:defaultValue="@string/pref_room_server_url_default"
-            android:dialogTitle="@string/pref_room_server_url_dlg" />
 
         <CheckBoxPreference
             android:key="@string/pref_displayhud_key"
@@ -231,6 +225,12 @@
             android:title="@string/pref_tracing_title"
             android:dialogTitle="@string/pref_tracing_dlg"
            android:defaultValue="@string/pref_tracing_default" />
+
+        <CheckBoxPreference
+            android:key="@string/pref_force_relay_key"
+            android:title="@string/pref_force_relay_title"
+            android:dialogTitle="@string/pref_force_relay_dlg"
+            android:defaultValue="@string/pref_force_relay_default" />
     </PreferenceCategory>
 
 </PreferenceScreen>
