--- a/app/src/main/res/layout/fragment_call.xml
+++ b/app/src/main/res/layout/fragment_call.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <TextView
         android:id="@+id/contact_name_call"
@@ -14,7 +15,7 @@
         android:textSize="24sp"
         android:layout_margin="8dp"/>
 
-    <LinearLayout
+    <RelativeLayout
            android:id="@+id/buttons_call_container"
            android:orientation="horizontal"
            android:layout_above="@+id/capture_format_text_call"
@@ -24,41 +25,69 @@
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
 
-       <ImageButton
-           android:id="@+id/button_call_disconnect"
-           android:background="@drawable/disconnect"
-           android:contentDescription="@string/disconnect_call"
-           android:focusableInTouchMode="false"
-           android:layout_marginEnd="16dp"
-           android:layout_width="48dp"
-           android:layout_height="48dp"/>
 
-       <ImageButton
-           android:id="@+id/button_call_switch_camera"
-           android:background="@android:drawable/ic_menu_camera"
-           android:contentDescription="@string/switch_camera"
-           android:focusableInTouchMode="false"
-           android:layout_marginEnd="8dp"
-           android:layout_width="48dp"
-           android:layout_height="48dp"/>
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/button_call_disconnect"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/disconnect"
+            style="@style/MenuButtonsStyle"
+            android:layout_alignParentBottom="true" />
 
-        <ImageButton
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/button_call_switch_camera"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@android:drawable/ic_menu_camera"
+            style="@style/MenuButtonsStyle"
+            android:layout_toRightOf="@+id/button_call_disconnect"
+            android:layout_alignParentBottom="true" />
+
+        <!--<ImageButton
            android:id="@+id/button_call_scaling_mode"
            android:background="@drawable/ic_action_return_from_full_screen"
            android:contentDescription="@string/disconnect_call"
             android:focusableInTouchMode="false"
            android:layout_width="48dp"
-           android:layout_height="48dp"/>
+           android:layout_height="48dp"/>-->
 
-       <ImageButton
-           android:id="@+id/button_call_toggle_mic"
-           android:background="@android:drawable/ic_btn_speak_now"
-           android:contentDescription="@string/toggle_mic"
-           android:focusableInTouchMode="false"
-           android:layout_marginEnd="8dp"
-           android:layout_width="48dp"
-           android:layout_height="48dp"/>
-    </LinearLayout>
+
+        <com.github.clans.fab.FloatingActionButton
+            android:id="@+id/button_call_toggle_mic"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@android:drawable/ic_btn_speak_now"
+            style="@style/MenuButtonsStyle"
+            android:layout_toRightOf="@+id/button_call_switch_camera"
+            android:layout_alignParentBottom="true" />
+
+        <com.github.clans.fab.FloatingActionMenu
+            android:id="@+id/add_to_call"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            fab:menu_labels_style="@style/MenuLabelsStyle"
+            fab:menu_labels_showAnimation="@anim/jump_from_down"
+            fab:menu_labels_hideAnimation="@anim/jump_to_down"
+            fab:menu_animationDelayPerItem="0"
+            fab:menu_shadowColor="#444"
+            fab:menu_colorNormal="#1565C0"
+            fab:menu_colorPressed="#2272CD"
+            fab:menu_colorRipple="#62B2FF"
+            android:layout_toRightOf="@+id/button_call_toggle_mic"
+            fab:menu_buttonSpacing="5dp"
+            android:layout_alignParentBottom="true">
+
+            <com.github.clans.fab.FloatingActionButton
+                android:id="@+id/add_all"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_add_white_24dp"
+                fab:fab_label="@string/all"
+                style="@style/MenuButtonsStyle" />
+
+        </com.github.clans.fab.FloatingActionMenu>
+
+    </RelativeLayout>
 
     <TextView
         android:id="@+id/capture_format_text_call"
