--- a/app/src/main/res/layout/activity_call.xml
+++ b/app/src/main/res/layout/activity_call.xml
@@ -16,6 +16,36 @@
     </org.appspot.apprtc.PercentFrameLayout>
 
     <org.appspot.apprtc.PercentFrameLayout
+        android:id="@+id/remote_video_layout2"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <org.webrtc.SurfaceViewRenderer
+            android:id="@+id/remote_video_view2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </org.appspot.apprtc.PercentFrameLayout>
+
+    <org.appspot.apprtc.PercentFrameLayout
+        android:id="@+id/remote_video_layout3"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <org.webrtc.SurfaceViewRenderer
+            android:id="@+id/remote_video_view3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </org.appspot.apprtc.PercentFrameLayout>
+
+    <org.appspot.apprtc.PercentFrameLayout
+        android:id="@+id/remote_video_layout4"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <org.webrtc.SurfaceViewRenderer
+            android:id="@+id/remote_video_view4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </org.appspot.apprtc.PercentFrameLayout>
+
+    <org.appspot.apprtc.PercentFrameLayout
         android:id="@+id/local_video_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
