--- a/app/src/main/res/layout/activity_connect.xml
+++ b/app/src/main/res/layout/activity_connect.xml
@@ -108,7 +108,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:visibility="gone">
+            android:visibility="visible">
 
             <TextView
                 android:id="@+id/room_listview_description"
@@ -138,12 +138,6 @@
                     android:inputType="text"
                     android:visibility="gone"/>
 
-                <ImageButton
-                    android:id="@+id/add_room_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_toRightOf="@+id/addroom_edittext"
-                    android:src="@drawable/ic_add_white_24dp"/>
 
             </LinearLayout>
 
@@ -153,6 +147,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:drawSelectorOnTop="false" />
+
+            <com.github.clans.fab.FloatingActionButton
+                android:id="@+id/add_room_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="15dp"
+                android:src="@drawable/ic_add_white_24dp"
+                style="@style/MenuButtonsStyle" />
 
             <TextView
                 android:id="@android:id/empty"
