--- a/app/src/main/res/layout/incoming_chat_row.xml
+++ b/app/src/main/res/layout/incoming_chat_row.xml
@@ -2,105 +2,110 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:layout_margin="5dp"
-    android:background="@drawable/incoming_bubble">
+    android:layout_margin="5dp">
 
     <ImageView
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
         android:id="@+id/image_id"
         android:layout_margin="5dp"
-        android:paddingLeft="20dp"
         android:layout_alignParentLeft="true"
         android:src="@drawable/user_icon"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="message time"
-        android:layout_margin="2dp"
-        android:layout_toRightOf="@+id/image_id"
-        android:id="@+id/msgtime"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="User Name"
-        android:layout_margin="2dp"
-        android:layout_toRightOf="@+id/image_id"
-        android:layout_below="@+id/msgtime"
-        android:id="@+id/displayName"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="Message"
-        android:layout_margin="5dp"
-        android:layout_toRightOf="@+id/displayName"
-        android:layout_below="@+id/msgtime"
-        android:layout_alignBottom="@+id/image_id"
-        android:id="@+id/msgtext"/>
 
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:layout_toRightOf="@+id/displayName"
-        android:layout_below="@+id/msgtime"
-        android:id="@+id/fileLayout">
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/downloadButton"
-            android:textColor="@color/black"
-            android:text="@string/download"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="Name"
-            android:layout_below="@+id/downloadButton"
-            android:id="@+id/name"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="Size"
-            android:layout_margin="5dp"
-            android:layout_below="@+id/name"
-            android:id="@+id/size"/>
+        android:layout_toRightOf="@+id/image_id"
+        android:background="@drawable/incoming_bubble">
 
         <RelativeLayout
-            android:id="@+id/downloadLayout"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/name">
-
-            <ProgressBar
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                style="@android:style/Widget.ProgressBar.Horizontal"
-                android:progressDrawable="@drawable/progress_drawable"
-                android:id="@+id/downloadProgress"/>
+            android:paddingLeft="20dp"
+            android:id="@+id/message_content_layout">
 
             <TextView
-                android:id="@+id/downloadProgressText"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="#00000000"
                 android:gravity="center"
-                android:layout_alignLeft="@+id/downloadProgress"
-                android:layout_alignTop="@+id/downloadProgress"
-                android:layout_alignRight="@+id/downloadProgress"
-                android:layout_alignBottom="@+id/downloadProgress"
-                android:text="0 KB / 0%"/>
+                android:text="Message"
+                android:textColor="@color/white"
+                android:layout_margin="5dp"
+                android:id="@+id/msgtext"/>
 
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:layout_toRightOf="@+id/displayName"
+                android:id="@+id/fileLayout">
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/downloadButton"
+                    android:textColor="@color/black"
+                    android:text="@string/download"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="Name"
+                    android:textColor="@color/white"
+                    android:layout_below="@+id/downloadButton"
+                    android:id="@+id/name"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="Size"
+                    android:textColor="@color/white"
+                    android:layout_margin="5dp"
+                    android:layout_below="@+id/name"
+                    android:id="@+id/size"/>
+
+                <RelativeLayout
+                    android:id="@+id/downloadLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/name">
+
+                    <ProgressBar
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        style="@android:style/Widget.ProgressBar.Horizontal"
+                        android:progressDrawable="@drawable/progress_drawable"
+                        android:id="@+id/downloadProgress"/>
+
+                    <TextView
+                        android:id="@+id/downloadProgressText"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="#00000000"
+                        android:gravity="center"
+                        android:layout_alignLeft="@+id/downloadProgress"
+                        android:layout_alignTop="@+id/downloadProgress"
+                        android:layout_alignRight="@+id/downloadProgress"
+                        android:layout_alignBottom="@+id/downloadProgress"
+                        android:text="0 KB / 0%"/>
+
+                </RelativeLayout>
+            </RelativeLayout>
         </RelativeLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="message time"
+            android:textColor="@color/white"
+            android:layout_margin="2dp"
+            android:paddingLeft="20dp"
+            android:layout_below="@+id/message_content_layout"
+            android:id="@+id/msgtime"/>
+
     </RelativeLayout>
+
 </RelativeLayout>
