--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -28,4 +28,22 @@
     <item name="colorPrimaryDark">@color/primary_dark</item>
     <item name="colorAccent">@color/accent</item>
   </style>
+
+  <style name="MenuLabelsStyle">
+    <item name="android:background">@drawable/fab_label_background</item>
+    <item name="android:textColor">#FFFFFF</item>
+    <item name="android:textSize">14sp</item>
+    <item name="android:maxLines">2</item>
+    <item name="android:ellipsize">end</item>
+  </style>
+
+  <style name="MenuButtonsStyle">
+    <item name="fab_size">normal</item>
+    <item name="fab_showAnimation">@anim/jump_from_down</item>
+    <item name="fab_hideAnimation">@anim/jump_to_down</item>
+    <item name="fab_shadowColor">#ccc</item>
+    <item name="fab_colorNormal">#1565C0</item>
+    <item name="fab_colorPressed">#2272CD</item>
+    <item name="fab_colorRipple">#62B2FF</item>
+  </style>
 </resources>
