--- a/app/src/main/res/layout/outgoing_chat_row.xml
+++ b/app/src/main/res/layout/outgoing_chat_row.xml
@@ -69,7 +69,8 @@
                     android:id="@+id/downloadLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@+id/name">
+                    android:layout_below="@+id/name"
+                    android:visibility="gone">
 
                     <ProgressBar
                         android:layout_width="match_parent"
